# dir-vigil

./: .gitignore  Cargo.toml  Dockerfile  README.md  README_ZH-CN.md  backend_startup.sh
backend/: Cargo.toml
backend/src/: config.rs  handler.rs  main.rs  totp.rs  util.rs
frontend/h5/: .env  .gitignore  package.json  rsbuild.config.ts
frontend/h5/src/: App.vue  index.ts  postcss.config.js
frontend/h5/src/api/: DirVigil.ts  index.ts
nginx/: nginx.conf
src/: config.rs  file_store.rs  handler.rs  logger.rs  main.rs  util.rs
